--- a/bootstrap form.html
+++ b/bootstrap form.html
@@ -6,18 +6,18 @@
     <title>Bootstrap demo</title>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
- <link rel="stylesheet" href="styless.css">
+
       <script type="text/javascript">
           function f1(){
-          alert(sucessful!!!)
-          }
+         var x = 'Your form has been filled successfully!!'
+         alert(x)
 
+          }
       </script>
   </head>
   <body  >
-<div class="container fluid">
-
-
+  <form>
+<div class="container-fluid">
     <div class="p-3 mb-2 bg-secondary text-white" align="center"><h2>PATHEYA TECHNOLOGIES</h2></div>
     <form>
   <table align="center" >
@@ -57,17 +57,7 @@
   </div>
 </nav></td>
       </tr>
-    <tr>
-      <td>  <div><div class="mg-1">
-  <label for="exampleFormControlInput1" class="form-label">EMAIL:</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-          <div class="mg-1">
-  <label for="exampleFormControlInput1" class="form-label">PASSWORD</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-      </div></td>
-    </tr>
+
     <tr>
       <td><div class="mb-1">
   <label for="exampleFormControlInput1" class="form-label">NAME:</label>
@@ -107,11 +97,32 @@
   <option value="3">mumbai</option>
 </select></td>
     </tr>
+      </tr>
     <tr>
-      <td><button type="button" class="btn btn-primary">SUBMIT</button></td>
+      <td>  <div><div class="mg-1">
+  <label for="exampleFormControlInput1" class="form-label">EMAIL:</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+          <div class="mg-1">
+  <label for="exampleFormControlInput1" class="form-label">PASSWORD</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter your password">
+</div>
+      </div></td>
+    </tr>
+      <tr>
+          <td>
+              <div class="mb-3">
+   <label for="exampleFormControlInput1" class="form-label">RESUME:</label>
+  <input class="form-control" type="file" id="formFile">
+</div>
+          </td>
+
+      </tr>
+    <tr>
+      <td><button onclick="f1()" type="submit" class="btn btn-primary">SUBMIT</button></td>
     </tr>
 <tr>
-    <td><button type="button" onclick="f1()" class="btn btn-secondary">RESET</button></td>
+    <td><button  type="submit"  class="btn btn-secondary">RESET</button></td>
     </td>
 </tr>
 </div>
