--- a/bootstrap form.html
+++ b/bootstrap form.html
@@ -8,15 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
       <script type="text/javascript">
-          function f1(){
-         var x = 'Your form has been filled successfully!!'
-         alert(x)
-
-          }
+       function f1(){
+       alert('succesfull')
+       }
+       function f2(){
+       alert('reset..?')
+       }
       </script>
   </head>
   <body  >
-  <form>
+  <form id="form">
 <div class="container-fluid">
     <div class="p-3 mb-2 bg-secondary text-white" align="center"><h2>PATHEYA TECHNOLOGIES</h2></div>
     <form>
@@ -119,13 +120,15 @@
 
       </tr>
     <tr>
-      <td><button onclick="f1()" type="submit" class="btn btn-primary">SUBMIT</button></td>
-    </tr>
+
+   <td><button onclick="f1()" type="submit" class="btn btn-primary">SUBMIT</button></td>
+
+
 <tr>
-    <td><button  type="submit"  class="btn btn-secondary">RESET</button></td>
+    <td><button onclick="f2()" type="submit"  class="btn btn-secondary">RESET</button></td>
     </td>
 </tr>
-</div>
+
 
 
   </table>
