--- a/bootstrap_vlog.html
+++ b/bootstrap_vlog.html
@@ -9,8 +9,10 @@
   </head>
   <body>
   <div class="container fluid">
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
   <div class="bg-success p-2 text-dark bg-opacity-25"><h2 align="center"> PATHYEA TECHNOLOGIES </h2></div>
-
 
 
  <nav class="navbar navbar-expand-lg bg-light  navbar navbar-dark bg-dark">">
@@ -32,8 +34,8 @@
             TOPICS
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">TECHNOLGY</a></li>
-            <li><a class="dropdown-item" href="#">WEB DEVELOPMENT</a></li>
+            <li><a class="dropdown-item" href="tech.html">TECHNOLGY</a></li>
+            <li><a class="dropdown-item" href="web.html">WEB DEVELOPMENT</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">SUPPORT</a></li>
               <li><a class="dropdown-item" href="#">WRITE FOR UR</a></li>
@@ -73,9 +75,8 @@
     <div class="carousel-item">
       <img src="img_1.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
+        <h5>WRITE FOR US................</h5>
+         </div>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -86,6 +87,8 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>  </div>
+  </div>
 </div>
 
 
